--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "eslint": "^5.16.0",
+    "flow-bin": "^0.98.0",
     "react": "16.8.3",
-    "react-native": "0.59.5",
+    "react-native": "^0.59.6",
     "react-native-bluetooth-serial": "^1.0.0-rc1"
   },
   "devDependencies": {
